<resources>
    <string name="app_name">GameQ</string>
    <string name="logo_alt">GameQ Logo</string>
    <string name="title_section1">Notifications</string>
    <string name="title_section2">Auto Accept</string>
    <string name="title_section3">Feedback</string>
    <string name="title_section4">Change Password</string>
    <string name="title_section5">How to use GameQ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="suggest_accept">Accept time is short, use auto accept?</string>
    <string name="dummy">content description unavailable</string>
    <string name="minimum_length">Minimum 6 characters</string>
    <string name="gcm_sender_id">773141536608</string>


    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm password</string>

    <string name="connection_failure">Connection failure</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">JOIN</string>
    <string name="action_sign_out">SIGN OUT</string>
    <string name="back">BACK</string>
    <string name="action_submit_email">SUBMIT EMAIL</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="invalid_password">Must be at least 6 characters</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_mismatch">Password fields do not match</string>

    <!-- Strings related to tutorial -->

    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>

    <string name="tut_title_1">Congratulations!</string>
    <string name="tut_title_2">Download &amp; Install</string>
    <string name="tut_title_3">Sign In</string>
    <string name="tut_title_4">Enjoy</string>

    <string name="tut_text_1">You are one of the first to make gaming simpler with GameQ!</string>
    <string name="tut_text_2">Get the computer client at www.gameq.io</string>
    <string name="tut_text_3">Use your GameQ account to sign in on your computer</string>
    <string name="tut_text_4">Relish every second you save. You could do anything...</string>

    <string name="tut_done">Go to App!</string>
<string name="title_activity_tutorial">What is GameQ?</string>



</resources>
