<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:background="@color/navTopGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_1"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tut_title_2"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_below="@id/textView3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tut_text_2"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:lines="2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:layout_marginBottom="100dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/tut_download"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/dummy"
        android:layout_below="@id/textView"
        android:layout_above="@id/textView2"/>

</RelativeLayout>