<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:background="@color/navTopGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tut_title_1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/dummy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tut_text_1"
        android:id="@+id/textView2"
        android:gravity="center"
        android:background="#00FFFFFF"
        android:textColor="#FFFFFF"
        android:lines="2"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        android:layout_above="@id/textView2"


        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/dummy" />
</RelativeLayout>