


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="#FF4C5A6D"
android:gravity="bottom|top"
    android:padding="0dp">

    <RelativeLayout android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
        android:background="#FF212b36">

    <TextView android:id="@+id/header_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="#FFe0e4ea"
        android:text="@string/unknown"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:textSize="20sp" />

    </RelativeLayout>
    <RelativeLayout android:id="@+id/notification_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/header_container"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="#00FFFFFF"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

    <TextView android:id="@+id/notifications_label" android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FFd6dfe6"
        android:text="@string/title_section1"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/off_box"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#FFFF0000"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/on_box"
            android:layout_alignTop="@+id/off_box"
            android:layout_toLeftOf="@+id/off_box"
            android:layout_toStartOf="@+id/off_box"
            android:checked="true" />

    </RelativeLayout>
        <RelativeLayout android:id="@+id/auto_accept_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/notification_container"
            android:background="#00000000"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

    <TextView android:id="@+id/auto_accept_label" android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FF969fa6"
        android:text="@string/title_section2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"/>
        </RelativeLayout>
    <RelativeLayout android:id="@+id/feedback_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/auto_accept_container"
                android:background="#00000000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <TextView android:id="@+id/feedback_label" android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FFd6dfe6"
        android:text="@string/title_section3"
        android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/change_password_container"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/feedback_container"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="#00000000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

    <TextView android:id="@+id/change_password_label" android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FFd6dfe6"
        android:text="@string/title_section4"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/tutorial_container"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
        android:layout_below="@+id/change_password_container"
                        android:background="#00000000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

    <TextView android:id="@+id/tutorial_label" android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FFd6dfe6"
        android:text="@string/title_section5"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />
    </RelativeLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/action_sign_out"
        android:id="@+id/logout_button"
        android:background="#FFFF6861"
        android:layout_gravity="bottom"
        android:textColor="#FFFFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp" />


</RelativeLayout>